Added draft reply to ITU-T SG16 liaison statement

--- a/liaisons/2022-10-28-itu-t-sg16.md
+++ b/liaisons/2022-10-28-itu-t-sg16.md
@@ -4,7 +4,7 @@
 
 It has been brought to the attention of ITU-T SG16 that the W3C Media Working Group has been developing specifications that reference some important Recommendations in the domain of ITU-T SG16. It is noted that the W3C WebCodecs specification, published as a W3C Working Draft, references Rec. ITU-T H.273 | ISO/IEC 23091-2 (Video CICP), and that the W3C WebCodecs Codec Registry specification, published as a W3C Group Draft Note, includes references to Rec. ITU-T G.711, Rec. ITU-T H.264 | ISO/IEC 14496-10 (AVC), and Rec. ITU-T H.265 | ISO/IEC 23008-2 (HEVC). ITU-T SG16 is very interested in this work and would like to request information from the W3C Media Working Group about its ongoing efforts and future plans regarding these W3C WebCodecs and W3C WebCodecs Codec Registry specifications.
 
-ITU-T SG16 would also like to inform the W3C Media Working Group about the recent development of Rec. ITU-T H.266 | ISO/IEC 23090-3, which may be relevant for future inclusion into the W3C WebCodecs Codec Registry specification. Rec. ITU-T H.266, known as Versatile Video Coding (VVC), is the latest in a series of very successful such jointly developed ITU-T Recommendations and International Standards for video coding, and is the direct successor to AVC and HEVC. 
+ITU-T SG16 would also like to inform the W3C Media Working Group about the recent development of Rec. ITU-T H.266 | ISO/IEC 23090-3, which may be relevant for future inclusion into the W3C WebCodecs Codec Registry specification. Rec. ITU-T H.266, known as Versatile Video Coding (VVC), is the latest in a series of very successful such jointly developed ITU-T Recommendations and International Standards for video coding, and is the direct successor to AVC and HEVC.
 
 VVC provides substantial coding efficiency improvements over HEVC (which itself provides substantial coding efficiency improvements over AVC). Formal subjective testing has been performed to confirm that VVC can achieve about a 50% bit rate reduction relative to HEVC for equal subjective video quality. Using objective metrics, test results generally demonstrate that VVC provides about a 40% bit rate reduction for 4K/UHD video test sequences for metrics such as PSNR.
 
@@ -14,17 +14,32 @@ The second edition of the VVC standard was published in April 2022, and it inclu
 
 ## Media WG response
 
-_Start with bullets on the points we want to make, then we can draft into a reply._
+_This is a draft reply, pending approval from WebCodecs editors and the Media WG._
 
-On ongoing efforts and future plans for WebCodecs and the WebCodecs Codec Registry:
+Many thanks for your liaison statement SG16-LS55 regarding the W3C WebCodecs specification.
 
-* Brief description of WebCodecs use cases
-* Current implementation status
-* Future plans for spec and implementations
-* Registry is not prescriptive - adding a registry entry does not commit browsers to implement the codec
-* Recently added a VideoFrame Metadata Registry, describe potential use cases
+The goal of WebCodecs is to provide web applications with efficient access to a web browser's built-in (software and hardware) encoders and decoders for encoding and decoding audio and video media, and decoding image files, in a way that is more efficient (in terms of network bandwidth, CPU and GPU performance, and power usage) than implementing media codecs in JavaScript or WebAssembly. We expect WebCodecs to support use cases such as very low latency live streaming, cloud gaming, live stream uploading, and non-realtime media editing.
 
-On Rec. ITU-T H.266 | ISO/IEC 23090-3 (VVC):
+The specification consists of the WebCodecs API, which defines a codec agnostic interface for encoding and decoding media, and a registry of specifications for codec-specific configuration options.
 
-* W3C would welcome adding VVC to the registry, depending on implementer support
-* Any VVC specific questions or suggestions? Config options for VVC decode/encode?
+W3C specifications are voluntarily adopted by browser implementers, rather than being mandated. Chromium based browsers including Google Chrome and Microsoft Edge have shipped the WebCodecs API, and implementation work is ongoing in Mozilla Firefox and Apple Safari. We cannot confirm at this stage when the WebCodecs API will ship in Firefox or Safari.
+
+The codec-specific WebCodecs registrations that reference ITU-T standards such as ITU-T G.711, ITU-T H.264, and ITU-T H.265 similarly have voluntary adoption, so each browser is free to choose which codecs to support.
+
+The Working Group's future plans include:
+
+* Extending the VideoFrame interface to allow metadata to be carried with the media, with a registry for different kinds of metadata. Face detection metadata is an example use case
+* Extending WebCodecs to add support for content protection features, if there is interest from content providers
+* Adding support for high dynamic range video, and greater than 8-bit depth
+* Cross-browser interoperability testing, as we advance the WebCodecs specification through the W3C standards track
+
+The Working Group would welcome adding a registration for Rec. ITU-T H.266 | ISO/IEC 23090-3 (VVC), depending on there being support from implementers, with adoption being voluntary. This could be a browser implementation or a JavaScript or WebAssembly polyfill that conforms to the WebCodecs API definition.
+
+A WebCodecs H.266 (VVC) Registration would describe details such as:
+
+* The fully qualified codec string to identify H.266 media
+* Identifiers for bytestream formats
+* The expected content of an EncodedVideoChunk
+* Any codec-specific configuration options, where appropriate
+
+We invite contribution from SG16 to develop a WebCodecs registration for H.266. You are welcome to open issues and comments in our GitHub repository at https://github.com/w3c/webcodecs.
