Minor wording changes to ITU-T liaison reply

--- a/liaisons/2022-10-28-itu-t-sg16.md
+++ b/liaisons/2022-10-28-itu-t-sg16.md
@@ -24,7 +24,7 @@ The specification consists of the WebCodecs API, which defines a codec agnostic 
 
 W3C specifications are voluntarily adopted by browser implementers, rather than being mandated. Chromium based browsers including Google Chrome and Microsoft Edge have shipped the WebCodecs API, and implementation work is ongoing in Mozilla Firefox and Apple Safari. We cannot confirm at this stage when the WebCodecs API will ship in Firefox or Safari.
 
-The codec-specific WebCodecs registrations that reference ITU-T standards such as ITU-T G.711, ITU-T H.264, and ITU-T H.265 similarly have voluntary adoption, so each browser is free to choose which codecs to support.
+The codec-specific WebCodecs registrations that reference ITU-T standards such as ITU-T G.711, ITU-T H.264, and ITU-T H.265 similarly have voluntary adoption, as each browser is free to choose which codecs to support.
 
 The Working Group's future plans include:
 
@@ -33,7 +33,7 @@ The Working Group's future plans include:
 * Adding support for high dynamic range video, and greater than 8-bit depth
 * Cross-browser interoperability testing, as we advance the WebCodecs specification through the W3C standards track
 
-The Working Group would welcome adding a registration for Rec. ITU-T H.266 | ISO/IEC 23090-3 (VVC), depending on there being support from implementers, with adoption being voluntary. This could be a browser implementation or a JavaScript or WebAssembly polyfill that conforms to the WebCodecs API definition.
+The Working Group would welcome adding a registration for Rec. ITU-T H.266 | ISO/IEC 23090-3 (VVC), depending on there being support from implementers. This could be a browser implementation or a JavaScript or WebAssembly polyfill that conforms to the WebCodecs API definition.
 
 A WebCodecs H.266 (VVC) Registration would describe details such as:
 
@@ -42,4 +42,4 @@ A WebCodecs H.266 (VVC) Registration would describe details such as:
 * The expected content of an EncodedVideoChunk
 * Any codec-specific configuration options, where appropriate
 
-We invite contribution from SG16 to develop a WebCodecs registration for H.266. You are welcome to open issues and comments in our GitHub repository at https://github.com/w3c/webcodecs.
+We invite contribution from SG16 to develop this registration. You are welcome to open issues and comments in our GitHub repository at https://github.com/w3c/webcodecs.
