Update liaison reply based on input from @youennf

--- a/liaisons/2022-10-28-itu-t-sg16.md
+++ b/liaisons/2022-10-28-itu-t-sg16.md
@@ -33,7 +33,7 @@ The Working Group's future plans include:
 * Adding support for high dynamic range video, and greater than 8-bit depth
 * Cross-browser interoperability testing, as we advance the WebCodecs specification through the W3C standards track
 
-The Working Group would welcome adding a registration for Rec. ITU-T H.266 | ISO/IEC 23090-3 (VVC), depending on there being support from implementers. This could be a browser implementation or a JavaScript or WebAssembly polyfill that conforms to the WebCodecs API definition.
+The Working Group would welcome adding a registration for Rec. ITU-T H.266 | ISO/IEC 23090-3 (VVC), depending on there being support from implementers. This could for instance be User Agent implementers interest via a browser implementation or Web developer interest via active deployment of a JavaScript or WebAssembly H.266 codec implementation.
 
 A WebCodecs H.266 (VVC) Registration would describe details such as:
 
